--- a/ThinkWhat/Modules/Controllers/App/Survey/delVotersViewController/delUserCell.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/delVotersViewController/delUserCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,7 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="userCell" id="gTV-IL-0wX" customClass="UserCell" customModule="ThinkWhat" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="userCell" id="gTV-IL-0wX" customClass="delUserCell" customModule="ThinkWhat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -61,6 +59,7 @@
                     </label>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="yQw-oF-jfG" firstAttribute="bottom" secondItem="ZTg-uK-7eu" secondAttribute="bottom" id="5H8-sB-Y76"/>
                 <constraint firstAttribute="bottom" secondItem="yQw-oF-jfG" secondAttribute="bottom" id="7WR-ge-QIK"/>
@@ -74,7 +73,6 @@
                 <constraint firstItem="yQw-oF-jfG" firstAttribute="top" secondItem="ada-3p-45r" secondAttribute="bottom" id="oOc-Ms-1b1"/>
                 <constraint firstItem="oop-6f-1nf" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.7" id="rSh-HT-MZf"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <connections>
                 <outlet property="ageLabel" destination="0C8-Zw-GNo" id="TRZ-5m-zFn"/>
                 <outlet property="genderIcon" destination="tYD-4q-2Ge" id="IHv-Rw-n72"/>
