--- a/ThinkWhat/Modules/Controllers/App/Subscriptions/SubsciptionsView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Subscriptions/SubsciptionsView.xib
@@ -8,41 +8,42 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="OpenSans-Semibold.ttf">
+            <string>OpenSans-Semibold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SubsciptionsView" customModule="ThinkWhat" customModuleProvider="target">
             <connections>
                 <outlet property="bottomContainer" destination="Vpm-D9-cyN" id="t9q-wg-oYh"/>
                 <outlet property="card" destination="X4d-cI-Foa" id="JGT-AC-cza"/>
                 <outlet property="cardShadow" destination="WXd-xw-6Wt" id="m0J-2h-vpY"/>
+                <outlet property="collectionView" destination="6XV-Rm-OmZ" id="3EJ-a8-fgx"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="Pgm-6r-hSr"/>
+                <outlet property="more" destination="17S-zV-iGm" id="De9-Q8-hVP"/>
+                <outlet property="subscribers" destination="62S-hj-7FF" id="b32-1h-6Sd"/>
                 <outlet property="upperContainer" destination="OwL-Ha-6XN" id="cZn-lg-cDY"/>
                 <outlet property="upperContainerHeightConstraint" destination="NDq-Y8-pXZ" id="PM2-PK-6Vz"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OwL-Ha-6XN">
-                    <rect key="frame" x="0.0" y="44" width="414" height="0.0"/>
-                    <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" id="NDq-Y8-pXZ"/>
-                    </constraints>
-                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vpm-D9-cyN">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="214" width="414" height="648"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WXd-xw-6Wt">
-                            <rect key="frame" x="10" y="10" width="394" height="798"/>
+                            <rect key="frame" x="10" y="-160" width="394" height="798"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X4d-cI-Foa">
-                            <rect key="frame" x="10" y="10" width="394" height="798"/>
+                            <rect key="frame" x="10" y="-160" width="394" height="798"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                     </subviews>
@@ -57,15 +58,64 @@
                         <constraint firstItem="WXd-xw-6Wt" firstAttribute="centerY" secondItem="X4d-cI-Foa" secondAttribute="centerY" id="vex-xQ-0eE"/>
                     </constraints>
                 </view>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OwL-Ha-6XN">
+                    <rect key="frame" x="0.0" y="44" width="414" height="170"/>
+                    <subviews>
+                        <button opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="62S-hj-7FF">
+                            <rect key="frame" x="161.5" y="138" width="91" height="32"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="14"/>
+                            <state key="normal" title="SUBSCRIBERS">
+                                <color key="titleColor" systemColor="secondaryLabelColor"/>
+                            </state>
+                            <connections>
+                                <action selector="subscribersTapped:" destination="-1" eventType="touchUpInside" id="19t-7f-rZg"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17S-zV-iGm">
+                            <rect key="frame" x="365" y="53" width="41" height="32"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="14"/>
+                            <state key="normal" title="MORE">
+                                <color key="titleColor" systemColor="secondaryLabelColor"/>
+                            </state>
+                            <connections>
+                                <action selector="moreTapped:" destination="-1" eventType="touchUpInside" id="Vof-NQ-nF6"/>
+                            </connections>
+                        </button>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6XV-Rm-OmZ">
+                            <rect key="frame" x="8" y="8" width="349" height="122"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xsW-UW-mV9">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                    <constraints>
+                        <constraint firstItem="6XV-Rm-OmZ" firstAttribute="leading" secondItem="OwL-Ha-6XN" secondAttribute="leading" constant="8" id="0au-eY-FoV"/>
+                        <constraint firstItem="62S-hj-7FF" firstAttribute="centerX" secondItem="OwL-Ha-6XN" secondAttribute="centerX" id="0di-Qm-QjQ"/>
+                        <constraint firstAttribute="height" constant="170" id="NDq-Y8-pXZ"/>
+                        <constraint firstItem="6XV-Rm-OmZ" firstAttribute="top" secondItem="OwL-Ha-6XN" secondAttribute="top" constant="8" id="QjX-KB-KPZ"/>
+                        <constraint firstAttribute="bottom" secondItem="62S-hj-7FF" secondAttribute="bottom" id="Vfs-gd-4z4"/>
+                        <constraint firstAttribute="trailing" secondItem="17S-zV-iGm" secondAttribute="trailing" constant="8" id="agU-vH-4ZT"/>
+                        <constraint firstItem="17S-zV-iGm" firstAttribute="centerY" secondItem="6XV-Rm-OmZ" secondAttribute="centerY" id="eKf-89-2d6"/>
+                        <constraint firstItem="17S-zV-iGm" firstAttribute="leading" secondItem="6XV-Rm-OmZ" secondAttribute="trailing" constant="8" id="t4w-sm-wEa"/>
+                        <constraint firstItem="6XV-Rm-OmZ" firstAttribute="height" secondItem="OwL-Ha-6XN" secondAttribute="height" multiplier="0.717647" id="zXh-hG-R5S"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="X4d-cI-Foa" firstAttribute="top" secondItem="OwL-Ha-6XN" secondAttribute="bottom" constant="10" id="1qZ-mw-RET"/>
                 <constraint firstItem="OwL-Ha-6XN" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="9Db-rX-6wy"/>
                 <constraint firstItem="Vpm-D9-cyN" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="FZQ-k1-Rw8"/>
                 <constraint firstItem="Vpm-D9-cyN" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="Uh5-ds-Aan"/>
                 <constraint firstItem="Vpm-D9-cyN" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="cls-aG-JXF"/>
+                <constraint firstItem="X4d-cI-Foa" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="ht7-Se-DvG"/>
                 <constraint firstItem="OwL-Ha-6XN" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ngT-dr-8px"/>
                 <constraint firstItem="OwL-Ha-6XN" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="nzZ-Zk-AIp"/>
                 <constraint firstItem="Vpm-D9-cyN" firstAttribute="top" secondItem="OwL-Ha-6XN" secondAttribute="bottom" id="pAp-oX-ZTw"/>
@@ -76,6 +126,9 @@
     <resources>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
