--- a/ThinkWhat/Modules/Controllers/App/Survey/VotersViewController/Cells/VoterCell.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/VotersViewController/Cells/VoterCell.xib
@@ -22,14 +22,34 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OQZ-NQ-7xH" customClass="Avatar" customModule="ThinkWhat" customModuleProvider="target">
-                        <rect key="frame" x="10" y="0.0" width="80" height="80"/>
+                        <rect key="frame" x="15" y="0.0" width="70" height="70"/>
+                        <subviews>
+                            <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WUO-W0-r7V">
+                                <rect key="frame" x="49.5" y="49.5" width="20" height="20"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V4G-16-9bk">
+                                <rect key="frame" x="47.5" y="47.5" width="24.5" height="24.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="V4G-16-9bk" secondAttribute="height" multiplier="1:1" id="AfA-zG-6oA"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="WUO-W0-r7V" firstAttribute="width" secondItem="V4G-16-9bk" secondAttribute="width" multiplier="0.8" id="2t3-2g-KYd"/>
+                            <constraint firstItem="WUO-W0-r7V" firstAttribute="centerX" secondItem="V4G-16-9bk" secondAttribute="centerX" id="Yqc-e9-AB2"/>
+                            <constraint firstItem="V4G-16-9bk" firstAttribute="centerY" secondItem="OQZ-NQ-7xH" secondAttribute="centerY" multiplier="1.7" id="cFh-9I-3nP"/>
+                            <constraint firstItem="WUO-W0-r7V" firstAttribute="height" secondItem="V4G-16-9bk" secondAttribute="height" multiplier="0.8" id="f9h-tF-KNr"/>
+                            <constraint firstItem="WUO-W0-r7V" firstAttribute="centerY" secondItem="V4G-16-9bk" secondAttribute="centerY" id="hZQ-XU-grj"/>
+                            <constraint firstItem="V4G-16-9bk" firstAttribute="width" secondItem="OQZ-NQ-7xH" secondAttribute="width" multiplier="0.35" id="m4w-1Q-cgG"/>
                             <constraint firstAttribute="width" secondItem="OQZ-NQ-7xH" secondAttribute="height" multiplier="1:1" id="mRZ-kn-mod"/>
+                            <constraint firstItem="V4G-16-9bk" firstAttribute="centerX" secondItem="OQZ-NQ-7xH" secondAttribute="centerX" multiplier="1.7" id="qwX-Cy-z3T"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Иван Иванов" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6HJ-ws-Xc9">
-                        <rect key="frame" x="14.5" y="80" width="71.5" height="20"/>
+                        <rect key="frame" x="14.5" y="70" width="71.5" height="30"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="11"/>
                         <nil key="textColor"/>
@@ -43,11 +63,13 @@
                 <constraint firstItem="OQZ-NQ-7xH" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="87e-eK-1ei"/>
                 <constraint firstAttribute="bottom" secondItem="6HJ-ws-Xc9" secondAttribute="bottom" id="Z2E-Ft-i25"/>
                 <constraint firstAttribute="top" secondItem="OQZ-NQ-7xH" secondAttribute="top" id="cAU-hv-fDr"/>
+                <constraint firstItem="OQZ-NQ-7xH" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.7" id="mPW-B6-CxB"/>
                 <constraint firstItem="6HJ-ws-Xc9" firstAttribute="centerX" secondItem="OQZ-NQ-7xH" secondAttribute="centerX" id="ugX-qD-1bT"/>
-                <constraint firstItem="OQZ-NQ-7xH" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.8" id="yYl-N1-bkP"/>
             </constraints>
             <connections>
                 <outlet property="avatar" destination="OQZ-NQ-7xH" id="nb4-yL-H8q"/>
+                <outlet property="checkmark" destination="V4G-16-9bk" id="aJn-j8-AIH"/>
+                <outlet property="checkmarkBg" destination="WUO-W0-r7V" id="dcG-Qu-5oq"/>
                 <outlet property="label" destination="6HJ-ws-Xc9" id="f3A-Y3-vvJ"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="89.732142857142847"/>
