--- a/ThinkWhat/Modules/Controllers/App/Survey/List/Table/SurveyCell.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/List/Table/SurveyCell.xib
@@ -21,6 +21,7 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TQe-qm-M2p">
                         <rect key="frame" x="16" y="42.5" width="15" height="15"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="15" id="2lQ-pM-VRt"/>
                             <constraint firstAttribute="width" constant="15" id="Yfq-4E-r3h"/>
                         </constraints>
                     </imageView>
@@ -36,110 +37,98 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FUT-8u-Psk">
-                        <rect key="frame" x="35" y="39.5" width="201" height="21"/>
+                        <rect key="frame" x="35" y="20" width="201" height="60"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="al8-u5-tyL" customClass="Icon" customModule="ThinkWhat" customModuleProvider="target">
-                        <rect key="frame" x="17.5" y="16" width="15" height="15"/>
+                        <rect key="frame" x="16" y="16" width="15" height="15"/>
                         <color key="backgroundColor" systemColor="systemGray2Color"/>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rS5-Gq-1UX" customClass="ProgressCircle" customModule="ThinkWhat" customModuleProvider="target">
-                        <rect key="frame" x="12" y="10.5" width="26.5" height="26"/>
+                        <rect key="frame" x="10.5" y="10.5" width="26" height="26"/>
                         <color key="backgroundColor" systemColor="systemGray2Color"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2M-4R-J0n">
-                        <rect key="frame" x="40.5" y="13.5" width="41.5" height="20.5"/>
+                        <rect key="frame" x="39" y="13.5" width="41.5" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dko-uL-nAZ">
-                        <rect key="frame" x="86" y="16" width="15" height="15"/>
+                        <rect key="frame" x="84.5" y="16" width="15" height="15"/>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Nqc-V4-EmP">
-                        <rect key="frame" x="107" y="16" width="32" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="32" id="CEy-Pq-Ish"/>
-                        </constraints>
-                    </stackView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mSx-6m-3Ju">
-                        <rect key="frame" x="16" y="73.5" width="13.5" height="13.5"/>
+                        <rect key="frame" x="16" y="70.5" width="13.5" height="13.5"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="mSx-6m-3Ju" secondAttribute="height" multiplier="1:1" id="WpV-UO-sfB"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f12-sb-toj">
-                        <rect key="frame" x="51.5" y="73.5" width="13.5" height="13.5"/>
+                        <rect key="frame" x="51.5" y="70.5" width="13.5" height="13.5"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cQ-4o-A7Q">
-                        <rect key="frame" x="31.5" y="74.5" width="16" height="12"/>
+                        <rect key="frame" x="31.5" y="71.5" width="16" height="12"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kMJ-MO-yxN">
-                        <rect key="frame" x="67" y="74.5" width="16" height="12"/>
+                        <rect key="frame" x="67" y="71.5" width="16" height="12"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Srk-dp-BaA">
-                        <rect key="frame" x="0.0" y="60.5" width="0.0" height="39.5"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="width" id="RCK-jz-XIL"/>
-                        </constraints>
-                    </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="STk-xA-PYA">
+                        <rect key="frame" x="105.5" y="16" width="15" height="15"/>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="kMJ-MO-yxN" firstAttribute="leading" secondItem="f12-sb-toj" secondAttribute="trailing" constant="2" id="0ZN-HN-xie"/>
+                    <constraint firstItem="FUT-8u-Psk" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.6" id="1Sa-VX-36h"/>
                     <constraint firstItem="u2M-4R-J0n" firstAttribute="centerY" secondItem="al8-u5-tyL" secondAttribute="centerY" id="1Ty-Gb-5wo"/>
                     <constraint firstItem="al8-u5-tyL" firstAttribute="width" secondItem="al8-u5-tyL" secondAttribute="height" multiplier="1:1" id="7Wq-lT-ORs"/>
                     <constraint firstItem="rS5-Gq-1UX" firstAttribute="centerY" secondItem="al8-u5-tyL" secondAttribute="centerY" id="8Rp-lZ-dJw"/>
                     <constraint firstItem="Aus-Lg-nvc" firstAttribute="centerX" secondItem="dO9-2m-2cG" secondAttribute="centerX" id="96D-FI-Nqp"/>
-                    <constraint firstItem="Nqc-V4-EmP" firstAttribute="height" secondItem="Dko-uL-nAZ" secondAttribute="height" id="BdY-yI-PaB"/>
-                    <constraint firstItem="rS5-Gq-1UX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="Fys-6j-YfN"/>
+                    <constraint firstItem="STk-xA-PYA" firstAttribute="centerY" secondItem="Dko-uL-nAZ" secondAttribute="centerY" id="AUM-dg-PAQ"/>
+                    <constraint firstAttribute="bottom" secondItem="mSx-6m-3Ju" secondAttribute="bottom" constant="16" id="G62-TV-3pm"/>
                     <constraint firstItem="f12-sb-toj" firstAttribute="centerY" secondItem="8cQ-4o-A7Q" secondAttribute="centerY" id="HJJ-12-qWd"/>
                     <constraint firstItem="Dko-uL-nAZ" firstAttribute="width" secondItem="Dko-uL-nAZ" secondAttribute="height" multiplier="1:1" id="IGg-9V-i2h"/>
-                    <constraint firstItem="TQe-qm-M2p" firstAttribute="height" secondItem="FUT-8u-Psk" secondAttribute="height" multiplier="0.731707" id="IZa-lm-kVq"/>
                     <constraint firstItem="Dko-uL-nAZ" firstAttribute="height" secondItem="al8-u5-tyL" secondAttribute="height" id="IuC-zx-Jxf"/>
+                    <constraint firstItem="STk-xA-PYA" firstAttribute="width" secondItem="STk-xA-PYA" secondAttribute="height" multiplier="1:1" id="KFg-4w-o0y"/>
                     <constraint firstItem="FUT-8u-Psk" firstAttribute="centerY" secondItem="TQe-qm-M2p" secondAttribute="centerY" id="L0c-d6-d86"/>
                     <constraint firstItem="mSx-6m-3Ju" firstAttribute="width" secondItem="mSx-6m-3Ju" secondAttribute="height" multiplier="1:1" id="NFt-6o-P5o"/>
-                    <constraint firstItem="Srk-dp-BaA" firstAttribute="top" secondItem="FUT-8u-Psk" secondAttribute="bottom" id="Phf-if-a55"/>
                     <constraint firstItem="rS5-Gq-1UX" firstAttribute="width" secondItem="rS5-Gq-1UX" secondAttribute="height" multiplier="1:1" id="Q5R-jg-nMy"/>
                     <constraint firstItem="dO9-2m-2cG" firstAttribute="leading" secondItem="FUT-8u-Psk" secondAttribute="trailing" constant="8" id="StL-A1-ew9"/>
                     <constraint firstItem="rS5-Gq-1UX" firstAttribute="height" secondItem="al8-u5-tyL" secondAttribute="height" multiplier="1.75" id="Trg-uP-W1Z"/>
-                    <constraint firstAttribute="bottom" secondItem="Srk-dp-BaA" secondAttribute="bottom" id="U5z-H0-ztq"/>
-                    <constraint firstItem="mSx-6m-3Ju" firstAttribute="centerY" secondItem="Srk-dp-BaA" secondAttribute="centerY" id="WTD-jI-nas"/>
                     <constraint firstItem="dO9-2m-2cG" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.4" id="Wfu-WK-Wja"/>
                     <constraint firstItem="8cQ-4o-A7Q" firstAttribute="leading" secondItem="mSx-6m-3Ju" secondAttribute="trailing" constant="2" id="XUV-M2-tlF"/>
                     <constraint firstItem="mSx-6m-3Ju" firstAttribute="width" secondItem="mSx-6m-3Ju" secondAttribute="height" multiplier="1:1" id="Z8o-kt-6fz"/>
                     <constraint firstItem="8cQ-4o-A7Q" firstAttribute="centerY" secondItem="mSx-6m-3Ju" secondAttribute="centerY" id="Zfb-uu-jIM"/>
                     <constraint firstItem="f12-sb-toj" firstAttribute="leading" secondItem="8cQ-4o-A7Q" secondAttribute="trailing" constant="4" id="a4L-Zq-cdy"/>
-                    <constraint firstItem="Srk-dp-BaA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ayu-Lh-e0Q"/>
-                    <constraint firstItem="Nqc-V4-EmP" firstAttribute="leading" secondItem="Dko-uL-nAZ" secondAttribute="trailing" constant="6" id="cDy-Aa-DvO"/>
                     <constraint firstItem="TQe-qm-M2p" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="dfh-jp-ZUj"/>
-                    <constraint firstItem="mSx-6m-3Ju" firstAttribute="leading" secondItem="Srk-dp-BaA" secondAttribute="trailing" constant="16" id="edh-yw-uAJ"/>
+                    <constraint firstItem="mSx-6m-3Ju" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="drW-po-ekB"/>
                     <constraint firstItem="dO9-2m-2cG" firstAttribute="width" secondItem="dO9-2m-2cG" secondAttribute="height" multiplier="1:1" id="eg1-1U-uM1"/>
                     <constraint firstItem="u2M-4R-J0n" firstAttribute="leading" secondItem="al8-u5-tyL" secondAttribute="trailing" constant="8" id="epo-k8-W5D"/>
                     <constraint firstItem="Dko-uL-nAZ" firstAttribute="leading" secondItem="u2M-4R-J0n" secondAttribute="trailing" constant="4" id="fDi-dZ-efV"/>
                     <constraint firstItem="Dko-uL-nAZ" firstAttribute="centerY" secondItem="u2M-4R-J0n" secondAttribute="centerY" id="hMz-AS-AdS"/>
                     <constraint firstItem="dO9-2m-2cG" firstAttribute="centerY" secondItem="FUT-8u-Psk" secondAttribute="centerY" multiplier="0.75" id="iNN-er-a9v"/>
                     <constraint firstItem="al8-u5-tyL" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.15" id="khn-xX-qfD"/>
+                    <constraint firstItem="STk-xA-PYA" firstAttribute="leading" secondItem="Dko-uL-nAZ" secondAttribute="trailing" constant="6" id="kvB-GU-HGY"/>
                     <constraint firstItem="rS5-Gq-1UX" firstAttribute="centerX" secondItem="al8-u5-tyL" secondAttribute="centerX" id="lgj-7c-cqm"/>
                     <constraint firstItem="kMJ-MO-yxN" firstAttribute="centerY" secondItem="f12-sb-toj" secondAttribute="centerY" id="nyK-Ti-fpc"/>
                     <constraint firstItem="TQe-qm-M2p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ojY-v6-CHh"/>
                     <constraint firstItem="FUT-8u-Psk" firstAttribute="leading" secondItem="TQe-qm-M2p" secondAttribute="trailing" constant="4" id="p5D-SL-EbC"/>
-                    <constraint firstItem="Nqc-V4-EmP" firstAttribute="centerY" secondItem="u2M-4R-J0n" secondAttribute="centerY" id="tHz-HR-Vf0"/>
                     <constraint firstItem="mSx-6m-3Ju" firstAttribute="height" secondItem="al8-u5-tyL" secondAttribute="height" multiplier="0.9" id="tNQ-8k-596"/>
                     <constraint firstItem="f12-sb-toj" firstAttribute="width" secondItem="f12-sb-toj" secondAttribute="height" multiplier="1:1" id="uKp-OS-bhN"/>
                     <constraint firstItem="Aus-Lg-nvc" firstAttribute="top" secondItem="dO9-2m-2cG" secondAttribute="bottom" constant="4" id="uLC-Ud-b0I"/>
                     <constraint firstAttribute="trailing" secondItem="dO9-2m-2cG" secondAttribute="trailing" constant="16" id="usK-D0-FUj"/>
+                    <constraint firstItem="STk-xA-PYA" firstAttribute="width" secondItem="Dko-uL-nAZ" secondAttribute="width" id="vjP-6W-VK2"/>
+                    <constraint firstItem="al8-u5-tyL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="vvu-05-3ld"/>
                     <constraint firstItem="al8-u5-tyL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="w5P-38-khQ"/>
                     <constraint firstItem="mSx-6m-3Ju" firstAttribute="width" secondItem="mSx-6m-3Ju" secondAttribute="height" multiplier="1:1" id="xcZ-hx-PqW"/>
                     <constraint firstItem="f12-sb-toj" firstAttribute="height" secondItem="mSx-6m-3Ju" secondAttribute="height" id="xgG-td-yWX"/>
@@ -150,10 +139,9 @@
                 <outlet property="avatar" destination="dO9-2m-2cG" id="S9J-It-oLd"/>
                 <outlet property="hotIcon" destination="TQe-qm-M2p" id="zEJ-wa-agG"/>
                 <outlet property="hotIconWidth" destination="Yfq-4E-r3h" id="lB7-Ds-6g8"/>
+                <outlet property="hotSpacer" destination="p5D-SL-EbC" id="9UX-4l-dUm"/>
                 <outlet property="mark" destination="Dko-uL-nAZ" id="tj2-l8-pYN"/>
                 <outlet property="progress" destination="rS5-Gq-1UX" id="bTT-PQ-mXq"/>
-                <outlet property="stackView" destination="Nqc-V4-EmP" id="QXD-Ju-0Am"/>
-                <outlet property="stackViewWidthConstraint" destination="CEy-Pq-Ish" id="7EC-uW-Kab"/>
                 <outlet property="titleLabel" destination="FUT-8u-Psk" id="bMz-Rw-BPd"/>
                 <outlet property="topicIcon" destination="al8-u5-tyL" id="Ad2-DS-Fy7"/>
                 <outlet property="topicLabel" destination="u2M-4R-J0n" id="tjk-mu-0zo"/>
@@ -162,6 +150,7 @@
                 <outlet property="viewsLabel" destination="kMJ-MO-yxN" id="zE1-mk-2vR"/>
                 <outlet property="votesLimitIcon" destination="mSx-6m-3Ju" id="bs9-qW-8gj"/>
                 <outlet property="votesLimitLabel" destination="8cQ-4o-A7Q" id="ll2-EY-h7u"/>
+                <outlet property="watch" destination="STk-xA-PYA" id="D9l-0o-FaX"/>
             </connections>
             <point key="canvasLocation" x="139" y="81"/>
         </tableViewCell>
